# linux-setup

./: .zshrc  Flutter.md  Python-notes.md  Python.md  README.md  emacs_wishlist.md  git.md  linux_fixes.md  popos_upgrade.md  pyproject.toml
android_studio_settings/android-studio-settings/settings/: installed.txt
android_studio_settings/android-studio-settings/settings/keymaps/: Emacs copy.xml
android_studio_settings/android-studio-settings/settings/options/: filetypes.xml  jdk.table.xml  macros.xml  ui.lnf.xml
android_studio_settings/settings/: installed.txt
android_studio_settings/settings/options/: editor.xml  filetypes.xml  gutter.xml  ide.general.xml  jdk.table.xml  terminal.xml  ui.lnf.xml  updates.xml
android_studio_settings/settings/options/linux/: abbreviations.xml  keymap.xml
installation_scripts/: README.md  install-android-studio.yml  install-flutter.yml  install-skype.yml  install-visual-studio-code.yml  linux-setup.yml
